@@ -26,8 +26,8 @@ public class Box<T> {
 
     public static void main(String[] args) {
         Box<Integer> integerBox = new Box<Integer>();
-        integerBox.set(new Integer(10));
-        integerBox.inspect(new Integer(11));
+        integerBox.set(Integer.valueOf(10));
+        integerBox.inspect((Integer.valueOf(11)));
        // integerBox.inspect("some text"); // error: this is still String!
     }
 }
